--- a/action.yaml
+++ b/action.yaml
@@ -19,7 +19,7 @@ runs:
       git add tracee.profile
       git commit -m 'update tracee.profile'
       git push -f --set-upstream origin tracee-profile-update
-      gh auth login --with-token <<<'${{ secrets.GITHUB_TOKEN }}'
+#      gh auth login --with-token <<<'${{ secrets.GITHUB_TOKEN }}'
       compareURL='${{ github.event.compare }}'
       bodyMessage="Changes introduced with changes:${compareURL} Powered by Tracee"
       gh pr create --title "Updates to tracee.profile" --body "${bodyMessage}"
